Added styling, buttons

--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,11 @@
   <head>
     <title>Website Portolio</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel = "stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans|Slabo+27px" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body = "myPage" data-spy = "scroll" data-target = ".navbar" data-offset = "60">
     <!-- Navagation Bar -->
@@ -17,7 +19,7 @@
             <span class = "icon-bar"></span>
             <span class = "icon-bar"></span>
           </button>
-          <a class = "navbar-brand" href = "#myPage">Logo</a>
+          <a class = "navbar-brand" href = "#myPage">Me</a>
         </div>
         <div class = "collapse navbar-collapse" id = "myNavbar">
           <ul class = "nav navbar-nav navbar-right">
@@ -46,8 +48,16 @@
             <p>I enjoy all things coding and sports. I am always ready to learn about all things programming.
             The thought of expanding my knowledge on a new language or framework is very exciting and I can't wait to see where the industry takes me.
             I am willing to learn whatever I need to in order to excel at a job and I am always looking at new ways to solve different problems.</p>
+            <br>
+            <button class = "btn btn-default btn-lg"><a href="#contact">Get in Touch</a></button>
+       </div>
+       <div class = "col-sm-4">
+         <span class = "glyphicon glyphicon-education logo slideanim"></span>
        </div>
      </div>
    </div>
+   <!-- Projects section -->
+   <!-- Skills section -->
+   <!-- Contact section -->
   </body>
 </html>
